review comment fixes
Signed-off-by: abhishek-sa1 <abhishek.sa3@dell.com>

--- a/provision/roles/xcat_discovery_provision/tasks/main.yml
+++ b/provision/roles/xcat_discovery_provision/tasks/main.yml
@@ -50,6 +50,9 @@
 
     - name: Configuration of postscripts
       ansible.builtin.include_tasks: postscripts/main.yml
+      when:
+        - control_plane_os in control_plane_os_redhat or
+          control_plane_os in control_plane_os_rocky
 
     - name: Configure DHCP
       ansible.builtin.include_tasks: configure_dhcp.yml
