--- a/security/roles/ldap_server/tasks/ldap_prereq.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq.yml
@@ -35,9 +35,10 @@
     changed_when: false
   
   - name: Copy Certificate to contol plane for client setup
-    copy:
+    fetch:
       src: "{{ TLS_Certificates_directory_path }}/ldapserver.crt"
       dest: "{{ tls_cert_path }}"
+    delegate_to: localhost
 
   - name: Set default tls certificate path for LTB playbook
     ansible.builtin.set_fact:
