--- a/security/roles/ldap_client/tasks/configure_ldap_client.yml
+++ b/security/roles/ldap_client/tasks/configure_ldap_client.yml
@@ -62,5 +62,5 @@
 
 - name: Copy the certificate to remote node
   copy:
-    src: "{{ ldaptoolbox_openldap_olcTLSCACertificateFile }}"
+    src: "{{ hostvars[groups['manager'][0]]['ldaptoolbox_openldap_olcTLSCACertificateFile'] }}"
     dest: "{{ tls_cert_path }}"
