--- a/security/roles/ldap_client/tasks/configure_sssd_conf.yml
+++ b/security/roles/ldap_client/tasks/configure_sssd_conf.yml
@@ -16,7 +16,7 @@
 - name: Extract the domain name required by LDAP
   ansible.builtin.set_fact:
     reqd_domain_name: "{{ (hostvars['127.0.0.1']['domain_name'].split('.') | map('regex_replace', '^', 'dc=') | list) | join(',') }}"
-    certificate_path: "{{ hostvars['127.0.0.1']['CA_Certificate_file'].split('/') | select | list }}"
+    certificate_path: "{{ hostvars[groups['manager'][0]]['ldaptoolbox_openldap_olcTLSCACertificateFile'] | basename }}"
 
 - name: Update sssd.conf file for TLS connection type
   block:
@@ -50,7 +50,7 @@
       ansible.builtin.replace:
         path: "{{ sssd_conf_dest }}"
         regexp: "ldap_tls_cacert = /etc/openldap/certs/ldapserver.crt"
-        replace: "ldap_tls_cacert = {{ tls_cert_path + certificate_path[-1] }}"
+        replace: "ldap_tls_cacert = {{ tls_cert_path + certificate_path }}"
 
     - name: Update bind dn details if it is provided in input file
       block:
