--- a/provision/roles/xcat_prepare_cp/tasks/pre_requisites.yml
+++ b/provision/roles/xcat_prepare_cp/tasks/pre_requisites.yml
@@ -68,25 +68,27 @@
   failed_when: false
   register: site_table_check
 
-- name: Set xcat_installation_status to true for RHEL/Rocky
+- name: Set service_extension variable for RHEL/Rocky
   ansible.builtin.set_fact:
-    xcat_installation_status: true
+    xcatd_service: "xcatd.service"
+    postgresql_service: "postgresql.service"
   when:
-    - "'xcatd.service' in ansible_facts.services"
-    - "'postgresql.service' in ansible_facts.services"
-    - "'running' in ansible_facts.services['xcatd.service'].state"
-    - "'running' in ansible_facts.services['postgresql.service'].state"
-    - "'#key,value' in site_table_check.stdout"
     - control_plane_os in control_plane_os_redhat or
       control_plane_os in control_plane_os_rocky
 
-- name: Set xcat_installation_status to true for ubuntu
+- name: Set service_extension variable
+  ansible.builtin.set_fact:
+    xcatd_service: "xcatd"
+    postgresql_service: "postgresql"
+  when:
+    - control_plane_os in control_plane_os_ubuntu
+
+- name: Set xcat_installation_status to true
   ansible.builtin.set_fact:
     xcat_installation_status: true
   when:
-    - "'xcatd' in ansible_facts.services"
-    - "'postgresql' in ansible_facts.services"
-    - "'running' in ansible_facts.services['xcatd'].state"
-    - "'running' in ansible_facts.services['postgresql'].state"
+    - xcatd_service in ansible_facts.services
+    - postgresql_service in ansible_facts.services
+    - "'running' in ansible_facts.services[xcatd_service].state"
+    - "'running' in ansible_facts.services[postgresql_service].state"
     - "'#key,value' in site_table_check.stdout"
-    - control_plane_os in control_plane_os_ubuntu
