--- a/provision/roles/xcat_prepare_cp/tasks/main.yml
+++ b/provision/roles/xcat_prepare_cp/tasks/main.yml
@@ -20,23 +20,14 @@
     MANPATH: "{{ xcat_manpath_env }}"
     PERL_BADLANG: "{{ perl_badlang_env }}"
   block:
-    - name: Include xcat_prepare_cp role vars
-      ansible.builtin.include_vars: "{{ item }}"
-      with_items: "{{ xcat_prepare_cp_vars }}"
+    - name: Include vars for {{ control_plane_os }}
+      ansible.builtin.include_vars: "{{ role_path }}/vars/{{ control_plane_os }}.yml"
 
     - name: Check xcat installation pre-requisites
       ansible.builtin.include_tasks: pre_requisites.yml
 
-    - name: Install xCAT on rhel based OS
-      ansible.builtin.include_tasks: rhel/main.yml
-      when:
-        - control_plane_os in control_plane_os_redhat or
-          control_plane_os in control_plane_os_rocky
-
-    - name: Install xCAT on ubuntu OS
-      ansible.builtin.include_tasks: ubuntu/main.yml
-      when:
-        - control_plane_os in control_plane_os_ubuntu
+    - name: Install xCAT on {{ control_plane_os }}
+      ansible.builtin.include_tasks: "{{ control_plane_os }}/main.yml"
 
     - name: Configuration of xcat
       ansible.builtin.include_tasks: configure_xcat.yml
