--- a/telemetry/roles/grafana/vars/main.yml
+++ b/telemetry/roles/grafana/vars/main.yml
@@ -1,4 +1,4 @@
-#  Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+#  Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -16,7 +16,7 @@
 # Usage: main.yml
 grafana_conf_path: "/opt/omnia/.data/grafana_svc_details.ini"
 grafana_conf_dest: "/opt/omnia/.data/"
-conf_file_mode: 0644
+conf_file_mode: "0644"
 
 # Usage: pre-requisites.yml
 collections_name:
