--- a/telemetry/roles/timescaledb/tasks/initialize_db.yml
+++ b/telemetry/roles/timescaledb/tasks/initialize_db.yml
@@ -1,4 +1,4 @@
-# Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+# Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -28,5 +28,5 @@
   changed_when: false
   register: status
   until: status is not failed
-  retries: "{{ retries }}"
-  delay: "{{ delay }}"
+  retries: "{{ max_retries }}"
+  delay: "{{ max_delay }}"
