--- a/storage/roles/nfs/vars/main.yml
+++ b/storage/roles/nfs/vars/main.yml
@@ -1,4 +1,4 @@
-#  Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+#  Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -20,7 +20,7 @@ storage_config_vars: "{{ role_path }}/../../../input/storage_config.yml"
 nfs_packages:
   - nfs-utils
   - nfs4-acl-tools
-file_perm: 0777
+file_perm: "0777"
 powervault_vars_filename: "powervault_vars.yml"
 fstab_path: "/etc/fstab"
 mount_message: "Failed to mount NFS client, Make sure NFS server is running on mentioned server_share_path"
