--- a/telemetry/roles/orchestrator/vars/main.yml
+++ b/telemetry/roles/orchestrator/vars/main.yml
@@ -1,4 +1,4 @@
-#  Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+#  Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -21,8 +21,8 @@ k8s_pkgs:
   - python3-netaddr
 success_msg_k8s_pod_network_cidr: "Appliance k8s pod network cidr validated"
 fail_msg_k8s_pod_network_cidr: "Failed. Incorrect appliance k8s pod network cidr provided in monitor_config.yml"
-utils_collection: ansible.utils:2.5.2
-pip_version: pip3.8
+utils_collection: ansible.utils:2.10.3
+pip_version: pip3.9
 
 # Usage: validate_grafana_params.yml
 fail_msg_grafana_credentials: "Failed. Incorrect grafana_username or grafana_password provided in input/telemetry_config.yml"
@@ -79,7 +79,7 @@ crio_repo2_gpg: https://download.opensuse.org/repositories/devel:/kubic:/libcont
 docker_repo_url: https://download.docker.com/linux/centos/docker-ce.repo
 docker_repo_dest: /etc/yum.repos.d/docker-ce.repo
 crio_repo: "devel:kubic:libcontainers:stable:cri-o:1.21,rhel-8-for-x86_64-appstream-rpms,rhel-8-for-x86_64-baseos-rpms"
-file_mode: 0700
+file_mode: "0700"
 docker_cli_package: docker-ce-cli-24.0.4
 retry_count: 3
 
@@ -101,21 +101,21 @@ calico_tcp_ports:
 
 # Usage: k8s_helm.yml
 helm_installer_file_directory: /root/bin
-helm_installer_file_directory_mode: 0755
+helm_installer_file_directory_mode: "0755"
 helm_installer_url: https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
 helm_installer_file_dest: /root/bin/get_helm.sh
-helm_installer_file_mode: 0700
+helm_installer_file_mode: "0700"
 helm_stable_repo_url: https://charts.helm.sh/stable
 
 # Usage: k8s_init.yml
 k8s_root_directory: /root/.kube
-k8s_root_directory_mode: 0755
+k8s_root_directory_mode: "0755"
 k8s_config_src: /etc/kubernetes/admin.conf
 k8s_config_dest: /root/.kube/config
-k8s_config_file_mode: 0644
+k8s_config_file_mode: "0644"
 k8s_cert_path: /etc/kubernetes/pki/ca.crt
 yaml_repo_dir_path: /root/k8s
-yaml_repo_dir_mode: 0755
+yaml_repo_dir_mode: "0755"
 tigera_operator_url: https://raw.githubusercontent.com/projectcalico/calico/v3.25.0/manifests/tigera-operator.yaml
 calico_yml_url: https://raw.githubusercontent.com/projectcalico/calico/v3.25.0/manifests/custom-resources.yaml
 crio_socket_path: /var/run/crio/crio.sock
@@ -125,23 +125,23 @@ ipaddresspool_file_src: "{{ role_path }}/files/ipaddresspool.yaml"
 metallb_ipaddresspool_file_dest: /var/lib/ipaddresspool.yaml
 metallb_file_owner: root
 metallb_group_owner: root
-metallb_ipaddresspool_file_mode: 0655
+metallb_ipaddresspool_file_mode: "0655"
 l2advertisement_file_src: "{{ role_path }}/files/l2advertisement.yaml"
 metallb_l2advertisement_file_dest: /var/lib/l2advertisement.yaml
-metallb_l2advertisement_file_mode: 0655
+metallb_l2advertisement_file_mode: "0655"
 metallb_yaml_url: https://raw.githubusercontent.com/metallb/metallb/v0.13.4/config/manifests/metallb-native.yaml
 metallb_wait_time: 120
 
 # Usage: k8s_services.yml
 k8s_dashboard_yaml_url: https://raw.githubusercontent.com/kubernetes/dashboard/v2.2.0/aio/deploy/recommended.yaml
 k8s_dashboard_admin_file_dest: /root/k8s/k8s_dashboard_admin.yaml
-k8s_dashboard_admin_file_mode: 0655
+k8s_dashboard_admin_file_mode: "0655"
 nfs_path: /var/nfs_repo
 vault_file_perm: '0644'
 
 # Usage: nfs_server_setup.yml
 nfs_share_offline_repo: /var/nfs_repo
-nfs_share_dir_mode: 0777
+nfs_share_dir_mode: "0777"
 exports_file_path: /etc/exports
 nfs_services:
   - mountd
