--- a/telemetry/roles/telemetry_validation/tasks/pre-requisites.yml
+++ b/telemetry/roles/telemetry_validation/tasks/pre-requisites.yml
@@ -33,6 +33,7 @@
     - name: Set SElinux to permissive mode
       ansible.builtin.command: setenforce 0
       when: '"SELinux status:                 enabled" in sestatus_current.stdout_lines'
+      changed_when: true
 
 - name: Install openshift using pip3
   ansible.builtin.pip:
