--- a/provision/roles/xcat_discovery_provision/tasks/pre_requisites.yml
+++ b/provision/roles/xcat_discovery_provision/tasks/pre_requisites.yml
@@ -41,26 +41,14 @@
 - name: Gathering service facts
   ansible.builtin.service_facts:
 
-- name: Set xcat_installation_status to true for RHEL/Rocky
+- name: Set xcat_installation_status to true
   ansible.builtin.set_fact:
     xcat_installation_status: true
   when:
-    - "'xcatd.service' in ansible_facts.services"
-    - "'postgresql.service' in ansible_facts.services"
-    - "'running' in ansible_facts.services['xcatd.service'].state"
-    - "'running' in ansible_facts.services['postgresql.service'].state"
-    - control_plane_os in control_plane_os_redhat or
-      control_plane_os in control_plane_os_rocky
-
-- name: Set xcat_installation_status to true for ubuntu
-  ansible.builtin.set_fact:
-    xcat_installation_status: true
-  when:
-    - "'xcatd' in ansible_facts.services"
-    - "'postgresql' in ansible_facts.services"
-    - "'running' in ansible_facts.services['xcatd'].state"
-    - "'running' in ansible_facts.services['postgresql'].state"
-    - control_plane_os in control_plane_os_ubuntu
+    - xcatd_service in ansible_facts.services
+    - postgresql_service in ansible_facts.services
+    - "'running' in ansible_facts.services[xcatd_service].state"
+    - "'running' in ansible_facts.services[postgresql_service].state"
 
 - name: Fail if xcat_installation_status is false
   ansible.builtin.fail:
