--- a/provision/roles/xcat_repo_manipulate/vars/redhat.yml
+++ b/provision/roles/xcat_repo_manipulate/vars/redhat.yml
@@ -13,6 +13,10 @@
 #  limitations under the License.
 ---
 
+# Usage: pre_requisites.yml
+xcatd_service: "xcatd.service"
+postgresql_service: "postgresql.service"
+
 # Usage: main.yml
 os_supported_rhel: "redhat"
 provision_os_rhel: "rhel"
