--- a/provision/roles/provision_validation/tasks/package_installation.yml
+++ b/provision/roles/provision_validation/tasks/package_installation.yml
@@ -13,12 +13,9 @@
 # limitations under the License.
 ---
 
-- name: Install common packages for provision - rhel/rocky
-  when:
-    - control_plane_os in control_plane_os_redhat or
-      control_plane_os in control_plane_os_rocky
+- name: Install common packages for provision
   block:
-    - name: Install common packages for provision - rhel/rocky
+    - name: Install common packages for provision
       ansible.builtin.package:
         name: "{{ common_packages_provision }}"
         state: present
@@ -26,15 +23,6 @@
     - name: Failed to install common packages for provision
       ansible.builtin.fail:
         msg: "{{ provision_package_fail_msg }}"
-
-- name: Install common packages for provision - ubuntu
-  when:
-    - control_plane_os in control_plane_os_ubuntu
-  block:
-    - name: Install common packages for provision - ubuntu
-      ansible.builtin.package:
-        name: "{{ common_packages_provision_ubuntu }}"
-        state: present
 
 - name: Install netaddr and pexpect
   ansible.builtin.command: "{{ pip_version }} install {{ item }}"
