--- a/utils/roles/control_plane_cleanup/tasks/clean_provision_setup.yml
+++ b/utils/roles/control_plane_cleanup/tasks/clean_provision_setup.yml
@@ -17,6 +17,9 @@
   ansible.builtin.set_fact:
     control_plane_os: "{{ ansible_distribution | lower }}"
 
+- name: Include vars for {{ control_plane_os }}
+  ansible.builtin.include_vars: "{{ role_path }}/vars/{{ control_plane_os }}.yml"
+
 - name: Uninstall xCAT
   block:
     - name: Validate xCAT service
@@ -112,50 +115,34 @@
         - "{{ xcat_data_files_path }}"
         - "{{ xcat_del_files }}"
 
-- name: Remove packages RHEL/Rocky
-  when:
-    - control_plane_os in control_plane_os_redhat or
-      control_plane_os in control_plane_os_rocky
-  block:
-    - name: Remove xCAT - RHEL/Rocky
+    - name: Remove xCAT and postgres packages - RHEL/Rocky
       ansible.builtin.package:
-        name: "{{ xcat_package }}"
+        name: "{{ xcat_packages }}"
         state: absent
       failed_when: false
+      when:
+        - control_plane_os in control_plane_os_redhat or
+          control_plane_os in control_plane_os_rocky
 
-    - name: Remove postgres - RHEL/Rocky
-      ansible.builtin.package:
-        name: "{{ postgres_packages }}"
+    - name: Remove xCAT and postgres packages - ubuntu
+      ansible.builtin.apt:
+        name: "{{ xcat_packages }}"
         state: absent
+        autoremove: true
       failed_when: false
+      when: control_plane_os in control_plane_os_ubuntu
 
-    - name: Remove postgres directory - RHEL/Rocky
+    - name: Remove postgres directory
       ansible.builtin.file:
         path: "{{ pg_dir_path }}"
         state: absent
 
-- name: Remove packages ubuntu
-  when:
-    - control_plane_os in control_plane_os_ubuntu
-  block:
-    - name: Remove xCAT package - ubuntu
-      ansible.builtin.apt:
-        name: "{{ xcat_packages_ubuntu }}"
-        state: absent
-        autoremove: true
-      failed_when: false
-
-    - name: Remove postgres directory - ubuntu
+    - name: Remove xCAT download files
       ansible.builtin.file:
-        path: "{{ pg_dir_path_ubuntu }}"
+        path: "{{ item }}"
         state: absent
-
-- name: Remove xCAT download files
-  ansible.builtin.file:
-    path: "{{ item }}"
-    state: absent
-  with_items: "{{ xcat_download_files }}"
-  tags: downloads
+      with_items: "{{ xcat_download_files }}"
+      tags: downloads
 
 - name: Create omnia folder in opt folder
   ansible.builtin.file:
