--- a/security/roles/login_common/tasks/main.yml
+++ b/security/roles/login_common/tasks/main.yml
@@ -25,5 +25,4 @@
       ansible.builtin.include_tasks: update_package.yml
   when:
     - os_leap not in ansible_distribution | lower
-    - hostvars['127.0.0.1']['freeipa_required']
-    - not hostvars['127.0.0.1']['ldap_required']
+    - hostvars['127.0.0.1']['authentication_system'] == 'freeipa'
