--- a/security/roles/hostname_validation/tasks/main.yml
+++ b/security/roles/hostname_validation/tasks/main.yml
@@ -15,4 +15,4 @@
 
 - name: Add hosts info in all nodes
   ansible.builtin.include_tasks: add_hosts.yml
-  when: hostvars['127.0.0.1']['freeipa_required']
+  when: hostvars['127.0.0.1']['authentication_system'] == 'freeipa'
