--- a/security/roles/ldap_client/vars/main.yml
+++ b/security/roles/ldap_client/vars/main.yml
@@ -13,7 +13,7 @@
 #  limitations under the License.
 ---
 
-# Usage: configre_ldap_client.yml
+# Usage: configure_ldap_client.yml
 ldap_client_packages:
   - openldap-clients
   - sssd
