--- a/security/roles/login_node/tasks/main.yml
+++ b/security/roles/login_node/tasks/main.yml
@@ -33,6 +33,5 @@
       ansible.builtin.include_tasks: install_389ds.yml
       when: os_leap in ansible_distribution | lower
   when:
-    - hostvars['127.0.0.1']['freeipa_required']
-    - not hostvars['127.0.0.1']['ldap_required']
+    - hostvars['127.0.0.1']['authentication_system'] == 'freeipa'
     - inventory_hostname not in groups['manager'][0]
