--- a/security/roles/secure_login_node/tasks/main.yml
+++ b/security/roles/secure_login_node/tasks/main.yml
@@ -24,16 +24,14 @@
   ansible.builtin.include_tasks: "{{ role_path }}/../login_node/tasks/check_prerequisites.yml"
   when:
     - os_leap not in ansible_distribution | lower
-    - hostvars['127.0.0.1']['freeipa_required']
-    - not hostvars['127.0.0.1']['ldap_required']
+    - hostvars['127.0.0.1']['authentication_system'] == 'freeipa'
 
 - name: FreeIPA configuration
   ansible.builtin.include_tasks: ipa_configuration.yml
   when:
-    - hostvars['127.0.0.1']['freeipa_required']
+    - hostvars['127.0.0.1']['authentication_system'] == 'freeipa'
     - freeipa_client_status
     - os_leap not in ansible_distribution | lower
-    - not hostvars['127.0.0.1']['ldap_required']
     - hostvars['127.0.0.1']['enable_secure_login_node']
 
 - name: Configure security features
