--- a/utils/cluster/install_ipa_client.yml
+++ b/utils/cluster/install_ipa_client.yml
@@ -22,8 +22,7 @@
   tasks:
     - name: Initialize security variables
       ansible.builtin.set_fact:
-        freeipa_required: true
-        ldap_required: false
+        authentication_system: "freeipa"
 
 - name: Install IPA client
   hosts: all
