--- a/security/roles/security_validation/tasks/validate_input_params.yml
+++ b/security/roles/security_validation/tasks/validate_input_params.yml
@@ -21,7 +21,7 @@
 - name: Verify the value of authentication_system
   ansible.builtin.assert:
     that:
-      - authentication_system == "openldap" or authentication_system == "freeipa"
+      - authentication_system == 'openldap' or authentication_system == 'freeipa'
     success_msg: "{{ authentication_system_success_msg }}"
     fail_msg: "{{ authentication_system_fail_msg }}"
 
